--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,1 +1,36 @@
-ECHO is on.
+name: CI Pipeline
+
+on: 
+  push: 
+    branches: 
+        - main
+  pull_request:
+    branches:
+      - main
+
+jobs:
+  validate:
+    runs-on: ubuntu-latest
+
+steps:
+  - name: Checkout code
+    uses: actions/checkout@v2
+
+- name: Set up Node.js
+  uses: actions/setup-node@v2
+  with: 
+    node-version:'14'
+    
+- name: Install dependencies
+    run: |
+      npm install htmlhint stylelint --save-dev
+
+- name: Validate HTML with htmlhint
+  run: npx htmlhint **/*.html
+
+- name: Validate CSS with stylelint
+  run: npx stylelint "**/*.css"
+  
+      
+    
+    
