--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,17 +16,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '14'
-
-      - name: Install dependencies
+      - name: Install htmlhint and stylelint globally
         run: |
-          npm install htmlhint stylelint --save-dev
+          npm install -g htmlhint stylelint
 
       - name: Validate HTML with htmlhint
-        run: npx htmlhint **/*.html
+        run: htmlhint **/*.html
 
       - name: Validate CSS with stylelint
-        run: npx stylelint "**/*.css"
+        run: stylelint "**/*.css"
