--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,3 +25,28 @@ jobs:
 
       - name: Validate CSS with stylelint
         run: stylelint "**/*.css"
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: validate
+    if: success()  # Ensures this step only runs if validation succeeds.
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up SSH key for deployment
+        run: |
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > private_key.pem
+          chmod 600 private_key.pem  # Ensure proper permissions for private key
+
+      - name: Deploy to Staging Server
+        run: |
+          # Deploy using rsync or scp to your EC2 instance
+          rsync -avz --delete -e "ssh -i private_key.pem -o StrictHostKeyChecking=no" ./ ubuntu@your-ec2-public-ip:/path/to/your/staging/directory
+
+          # Restart the application (if needed)
+          ssh -i private_key.pem -o StrictHostKeyChecking=no ubuntu@your-ec2-public-ip "systemctl restart your-application.service"
+
+      - name: Clean up SSH key
+        run: rm -f private_key.pem  # Clean up the private key after deployment
